several updates for positionning vert. and hor. TL

--- a/inst/app/www/sass/v_timeline.sass
+++ b/inst/app/www/sass/v_timeline.sass
@@ -20,7 +20,7 @@ ul
   width: auto
   background-color: white
   position: fixed
-  height: 100%
+  height: auto
   overflow: auto
   font-weight: 100
 
@@ -38,8 +38,7 @@ li a
 
 
 li a.active 
-  background-color: #4CAF50
-  color: white
+  background-color: white
   box-shadow: 0 0 0 3px black
 
 
