first functional run of both timelines

--- a/inst/app/www/sass/v_timeline.sass
+++ b/inst/app/www/sass/v_timeline.sass
@@ -13,43 +13,43 @@ $colUndoneDisabled: #B3AFAB80
 $colLine: #C6C8C6
 
 
-.active 
+.active_v 
   background-color: red
   box-shadow: 0 0 0 3px black
 
 
-.undone 
+.undone_v
   background-color: white
   color: black
   border: 3px solid $colUndone
   
-.undoneDisabled 
+.undoneDisabled_v 
   background-color: white
   color: black
   border: 3px solid $colUndoneDisabled
 
 
-.mandatory 
+.mandatory_v 
   background-color: white
   border: 3px solid $colMandatory
   
-.mandatoryDisabled 
+.mandatoryDisabled_v 
   background-color: white
   border: 3px solid $colMandatoryDisabled
 
-.completed 
+.completed_v 
   background-color: $colCompleted
   border: 3px solid $colCompleted
   
-.completedDisabled
+.completedDisabled_v
   background-color: $colCompletedDisabled
   border: 3px solid $colCompletedDisabled
   
-.skipped 
+.skipped_v 
   background-color: white
   border: 3px dashed $colSkipped
   
-.skippedDisabled
+.skippedDisabled_v
   background-color: white
   border: 3px dashed $colSkippedDisabled
 
