--- a/inst/app/www/sass/h_timeline.sass
+++ b/inst/app/www/sass/h_timeline.sass
@@ -26,8 +26,9 @@ $lineWidth: 3px
   transition: all 200ms ease-in
 
 .timestamp
-  margin-bottom: 20px
-  padding: 0px 40px
+  margin-bottom: 0px
+  margin-top: 30px
+  /*padding: 0px 40px*/
   display: flex
   flex-direction: column
   align-items: center
