--- a/inst/app/www/sass/h_timeline.sass
+++ b/inst/app/www/sass/h_timeline.sass
@@ -74,7 +74,7 @@ $lineWidth: 3px
     
     h4
       color: $colUndone
-      border-bottom: 3px solid white
+      border-bottom: 3px none white
     
   
 
@@ -90,7 +90,7 @@ $lineWidth: 3px
     
     h4
       color: $colUndoneDisabled
-      border-bottom: 3px solid white
+      border-bottom: 0px none blue
     
   
 
@@ -107,7 +107,7 @@ $lineWidth: 3px
     
     h4
       color: $colCompleted
-      border-bottom: 3px solid white
+      border-bottom: 3px none white
     
   
 
@@ -123,7 +123,7 @@ $lineWidth: 3px
     
     h4
       color: $colCompletedDisabled
-      border-bottom: 3px solid white
+      border-bottom: 3px none white
 
 
 .li.skipped
@@ -137,7 +137,7 @@ $lineWidth: 3px
     
     h4
       color: $colSkipped
-      border-bottom: 3px dashed  white
+      border-bottom: 3px none  white
     
   
 
@@ -153,7 +153,7 @@ $lineWidth: 3px
     
     h4
       color: $colSkippedDisabled
-      border-bottom: 3px dashed  white
+      border-bottom: 3px none  white
     
   
 
@@ -170,7 +170,7 @@ $lineWidth: 3px
     
     h4
       color: $colMandatory
-      border-bottom: 3px solid white
+      border-bottom: 3px none white
     
   
 
@@ -186,7 +186,7 @@ $lineWidth: 3px
     
     h4
       color: $colMandatoryDisabled
-      border-bottom: 3px solid white
+      border-bottom: 3px none white
     
   
 
