--- a/inst/app/www/sass/h_timeline.sass
+++ b/inst/app/www/sass/h_timeline.sass
@@ -23,30 +23,36 @@ $lineWidth: 3px
   justify-content: center
   
   &:before
-      content: ''
+    content: ''
+    border-left: 2px solid red
+    opacity: 0%
+    position: absolute
 
-//.li
-//  transition: all 200ms ease-in
-
+.li
+  border: $lineWidth none
+  
+  
 .timestamp
   margin-bottom: 0px
-  margin-top: 30px
+  margin-top: 15px
   /*padding: 0px 40px*/
   //display: flex
   //flex-direction: column
   align-items: center
   font-weight: 100
+  
 
+  
 .status 
   padding: 0px 20px
   display: flex
   justify-content: center
-  border-top: $lineWidth solid $colUndone
+  //border-top: $lineWidth solid $colUndone
   position: relative
   //transition: all 200ms ease-in
   h4
     font-weight: 600
-    border-bottom: 3px solid white
+    //border-bottom: 3px solid white
   
   
   &:before
@@ -55,7 +61,7 @@ $lineWidth: 3px
     height: $radius
     background-color: white
     border-radius: 55px
-    border: $lineWidth solid $colUndone
+    //border: $lineWidth solid blue
     position: absolute
     top: -12px
     //left: 50%
