--- a/inst/app/www/sass/h_timeline.sass
+++ b/inst/app/www/sass/h_timeline.sass
@@ -50,8 +50,9 @@ $lineWidth: 3px
   //border-top: $lineWidth solid $colUndone
   position: relative
   //transition: all 200ms ease-in
-  h4
+  p
     font-weight: 600
+    font-size: 12px
     //border-bottom: 3px solid white
   
   
@@ -78,9 +79,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colUndone
       //transition: all 200ms ease-in
     
-    h4
+    p
       color: $colUndone
       border-bottom: 3px none white
+      font-size: 60%
     
   
 
@@ -94,9 +96,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colUndoneDisabled
       //transition: all 200ms ease-in
     
-    h4
+    p
       color: $colUndoneDisabled
       border-bottom: 0px none blue
+      font-size: 12px
     
   
 
@@ -111,9 +114,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colCompleted
       transition: all 200ms ease-in
     
-    h4
+    p
       color: $colCompleted
       border-bottom: 3px none white
+      font-size: 12px
     
   
 
@@ -127,9 +131,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colCompletedDisabled
       transition: all 200ms ease-in
     
-    h4
+    p
       color: $colCompletedDisabled
       border-bottom: 3px none white
+      font-size: 12px
 
 
 .li.skipped
@@ -141,9 +146,10 @@ $lineWidth: 3px
       border: $lineWidth dashed  $colSkipped
       transition: all 200ms ease-in
     
-    h4
+    p
       color: $colSkipped
       border-bottom: 3px none  white
+      font-size: 12px
     
   
 
@@ -157,9 +163,10 @@ $lineWidth: 3px
       border: $lineWidth dashed  $colSkippedDisabled
       transition: all 200ms ease-in
     
-    h4
+    p
       color: $colSkippedDisabled
       border-bottom: 3px none  white
+      font-size: 12px
     
   
 
@@ -174,9 +181,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colMandatory
       //transition: all 200ms ease-in
     
-    h4
+    p
       color: $colMandatory
       border-bottom: 3px none white
+      font-size: 12px
     
   
 
@@ -190,70 +198,78 @@ $lineWidth: 3px
       border: $lineWidth solid $colMandatoryDisabled
       transition: all 200ms ease-in
     
-    h4
+    p
       color: $colMandatoryDisabled
       border-bottom: 3px none white
+      font-size: 12px
     
   
 
 
 .li.undone.active
   .status
-    h4
+    p
       border-bottom: 3px solid currentColor
     
   
 
 .li.completed.active
   .status
-    h4
+    p
       border-bottom: 3px solid currentColor 
+      font-size: 12px
     
   
 
 
 .li.skipped.active
   .status
-    h4
-      border-bottom: 3px dashed currentColor 
+    p
+      border-bottom: 3px dashed currentColor
+      font-size: 12px
     
   
 
 .li.mandatory.active
   .status
-    h4
+    p
       border-bottom: 3px solid currentColor
+      font-size: 12px
     
   
 
 
 .li.undoneDisabled.active
   .status
-    h4
+    p
       border-bottom: 3px solid currentColor
+      font-size: 12px
     
   
 
 
 .li.completedDisabled.active
   .status
-    h4
-      border-bottom: 3px solid currentColor 
+    p
+      border-bottom: 3px solid currentColor
+      font-size: 12px
     
   
 
 
 .li.skippedDisabled.active
   .status
-    h4
-      border-bottom: 3px dashed currentColor 
+    p
+      border-bottom: 3px dashed currentColor
+      font-size: 12px
     
   
 
 .li.mandatoryDisabled.active
   .status
-    h4
+    p
       border-bottom: 3px solid currentColor
+      font-size: 12px
     
   
 
