--- a/inst/app/www/sass/h_timeline.sass
+++ b/inst/app/www/sass/h_timeline.sass
@@ -50,9 +50,8 @@ $lineWidth: 3px
   //border-top: $lineWidth solid $colUndone
   position: relative
   //transition: all 200ms ease-in
-  p
+  h4
     font-weight: 600
-    font-size: 12px
     //border-bottom: 3px solid white
   
   
@@ -79,11 +78,9 @@ $lineWidth: 3px
       border: $lineWidth solid $colUndone
       //transition: all 200ms ease-in
     
-    p
+    h4
       color: $colUndone
       border-bottom: 3px none white
-      font-size: 60%
-    
   
 
 
@@ -96,10 +93,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colUndoneDisabled
       //transition: all 200ms ease-in
     
-    p
+    h4
       color: $colUndoneDisabled
       border-bottom: 0px none blue
-      font-size: 12px
+
     
   
 
@@ -114,10 +111,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colCompleted
       transition: all 200ms ease-in
     
-    p
+    h4
       color: $colCompleted
       border-bottom: 3px none white
-      font-size: 12px
+
     
   
 
@@ -131,10 +128,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colCompletedDisabled
       transition: all 200ms ease-in
     
-    p
+    h4
       color: $colCompletedDisabled
       border-bottom: 3px none white
-      font-size: 12px
+
 
 
 .li.skipped
@@ -146,10 +143,10 @@ $lineWidth: 3px
       border: $lineWidth dashed  $colSkipped
       transition: all 200ms ease-in
     
-    p
+    h4
       color: $colSkipped
       border-bottom: 3px none  white
-      font-size: 12px
+
     
   
 
@@ -163,10 +160,10 @@ $lineWidth: 3px
       border: $lineWidth dashed  $colSkippedDisabled
       transition: all 200ms ease-in
     
-    p
+    h4
       color: $colSkippedDisabled
       border-bottom: 3px none  white
-      font-size: 12px
+
     
   
 
@@ -181,10 +178,10 @@ $lineWidth: 3px
       border: $lineWidth solid $colMandatory
       //transition: all 200ms ease-in
     
-    p
+    h4
       color: $colMandatory
       border-bottom: 3px none white
-      font-size: 12px
+
     
   
 
@@ -198,78 +195,78 @@ $lineWidth: 3px
       border: $lineWidth solid $colMandatoryDisabled
       transition: all 200ms ease-in
     
-    p
+    h4
       color: $colMandatoryDisabled
       border-bottom: 3px none white
-      font-size: 12px
+
     
   
 
 
 .li.undone.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor
     
   
 
 .li.completed.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor 
-      font-size: 12px
+
     
   
 
 
 .li.skipped.active
   .status
-    p
+    h4
       border-bottom: 3px dashed currentColor
-      font-size: 12px
+
     
   
 
 .li.mandatory.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor
-      font-size: 12px
+
     
   
 
 
 .li.undoneDisabled.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor
-      font-size: 12px
+
     
   
 
 
 .li.completedDisabled.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor
-      font-size: 12px
+
     
   
 
 
 .li.skippedDisabled.active
   .status
-    p
+    h4
       border-bottom: 3px dashed currentColor
-      font-size: 12px
+
     
   
 
 .li.mandatoryDisabled.active
   .status
-    p
+    h4
       border-bottom: 3px solid currentColor
-      font-size: 12px
+
     
   
 
